--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"asset/icons/chat.png":["asset/icons/chat.png"],"asset/icons/pi_icon.png":["asset/icons/pi_icon.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"asset/icons/chat.png":["asset/icons/chat.png"],"asset/icons/pi_icon.png":["asset/icons/pi_icon.png"],"asset/icons/wallet.png":["asset/icons/wallet.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
